# pfe-test-entropie

./: pyproject.toml
.github/workflows/: publish.yml
src/my_app/: Tab.xlsx  Tab.xlsx:Zone.Identifier  Terre-export-analyses-larochelle_2013_2017.xlsx:Zone.Identifier  annexe.ipynb  cadsgen.py  entropies.py  expdf.csv  expdf_hist.csv  noise.py  notebook.ipynb  shapley.py
test_entropie/: aurea.xlsx
