[tool.poetry]
name = "my-app"
version = "0.1.0"
description = "My application"
license = "BSD 3-Clause License"
authors = ["CedrickArmel <cedrick-armel-yao@outlook.fr>"]
readme = "README.md"
packages = [{include = "test_entropie"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
faker = "^18.11.2"
scikit-learn = "^1.2.2"
openpyxl = "^3.1.2"
click = "^8.1.3"
didkit = "^0.3.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
flake8-bugbear = "^22.12.6"
mypy = "^0.971"
pytest = "^7.2.1"
pytest-cov = "^3.0.0"

[tool.semantic_release]
version_variable = [
    "src/my_app/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.scripts]
my-app = "my_app.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
